added missed action to form

--- a/source/directions.html
+++ b/source/directions.html
@@ -27,7 +27,7 @@
             <a class="site-list__link" href="#">НАПРАВЛЕНИЯ</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="companions.html">Попутчики</a>
+            <a class="site-list__link" href="companions.html">ПОПУТЧИКИ</a>
           </li>
         </ul>
       </nav>
