--- a/source/companions.html
+++ b/source/companions.html
@@ -26,7 +26,7 @@
             <a class="site-list__link" href="directions.html">НАПРАВЛЕНИЯ</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">Попутчики</a>
+            <a class="site-list__link" href="#">ПОПУТЧИКИ</a>
           </li>
         </ul>
       </nav>
@@ -250,7 +250,7 @@
           <span class="button__text">СВЕРНУТЬ</span>
         </button>
       </section>
-      <form class="choose-companion">
+      <form action="https://echo.htmlacademy.ru" method="POST" class="choose-companion">
         <h2 class="choose-companion__caption">Подберите идеального попутчика</h2>
         <hr class="choose-companion__line" />
         <ul class="choose-companion__list companions-list">
