--- a/source/index.html
+++ b/source/index.html
@@ -26,7 +26,7 @@
             <a class="site-list__link" href="directions.html">НАПРАВЛЕНИЯ</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="companions.html">Попутчики</a>
+            <a class="site-list__link" href="companions.html">ПОПУТЧИКИ</a>
           </li>
         </ul>
       </nav>
