created blocks and global folders. created blocks files

--- a/source/companions.html
+++ b/source/companions.html
@@ -21,7 +21,7 @@
 
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link" href="about.html">О СЕРВИСЕ</a>
+            <a class="site-list__link" href="index.html">О СЕРВИСЕ</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="directions.html">НАПРАВЛЕНИЯ</a>
