--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <span class="page-header__text-logo">Погнали?</span>
       <a class="page-header__logo visually-hidden">
-        <img src="img/logo.svg" width="226" height="30" alt="Логотип" />
+        <img class="logo" src="img/logo.svg" width="226" height="30" alt="Логотип" />
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
