added some styles for countries block

--- a/source/index.html
+++ b/source/index.html
@@ -121,7 +121,7 @@
     </section>
     <section class="about">
       <div class="container">
-        <h2 class="about__caption">О сервисе</h2>
+        <h2 class="text--caption">О сервисе</h2>
         <p class="text--defailt">
           Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и
           черпайте вдохновение в чужих.
@@ -134,7 +134,7 @@
     <section class="countries">
       <div class="container">
         <header class="countries__header">
-          <h2 class="visually-hidden">Направления для путешествий по всему свету!</h2>
+          <h2 class="text--caption">Направления</h2>
           <p class="countries__info">
             Мы не продаем туры и ничего не рекламируем. Люди сами пишут о странах, куда хотели бы отправиться и чем
             можно там заняться.
@@ -152,7 +152,7 @@
                       Тайланд
                     </dt>
                     <dd class="visits-list__count">
-                      <img class="visits-list__user-icon" src="user.svg" alt="Пользователь" />
+                      <img class="visits-list__user-icon" src="img/usericon.svg" alt="Пользователь" />
                       <span>18321</span>
                     </dd>
                   </div>
@@ -172,7 +172,7 @@
                       Франция
                     </dt>
                     <dd class="visits-list__count">
-                      <img class="visits-list__user-icon" src="user.svg" alt="Пользователь" />
+                      <img class="visits-list__user-icon" src="img/usericon.svg" alt="Пользователь" />
                       <span>12518</span>
                     </dd>
                   </div>
@@ -192,7 +192,7 @@
                       Чехия
                     </dt>
                     <dd class="visits-list__count">
-                      <img class="visits-list__user-icon" src="user.svg" alt="Пользователь" />
+                      <img class="visits-list__user-icon" src="img/usericon.svg" alt="Пользователь" />
                       <span>5326</span>
                     </dd>
                   </div>
