added line-height to text blocks. fixed misspelling

--- a/source/index.html
+++ b/source/index.html
@@ -100,7 +100,7 @@
           </div>
         </header>
         <blockquote class="promo__review">
-          <q class="text--defailt">Лучшее приложение, <br> что я видел в жизни!</q>
+          <q class="text--default">Лучшее приложение, <br> что я видел в жизни!</q>
           <p class="text--bold">Мурат Эльтазин главный редактор газеты <q>гаджет лайф</q></p>
         </blockquote>
         <ol class="promo__list information-list">
@@ -122,7 +122,7 @@
     <section class="about">
       <div class="container">
         <h2 class="text--caption">О сервисе</h2>
-        <p class="text--defailt">
+        <p class="text--default">
           Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и
           черпайте вдохновение в чужих.
         </p>
